# auroraview-dcc-shelves

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_zh.md  index.html  justfile  noxfile.py  package-lock.json  package.json  pyproject.toml  pytest.ini  settings.html  tailwind.config.cjs  test_api_bind.py  test_api_detection.py  test_api_timing.py  test_dcc_shelves_api.py  test_settings_native.py  test_settings_window.py  test_ui_interactive.py  tsconfig.json  vite.config.ts
.augment/rules/: OPTIMIZATION_CHANGELOG.md  README.md  SUMMARY.md  case-study-maya-ui-freeze-fix.md  optimization-opportunities.md  qt5-qt6-compatibility-guide.md  qt6-optimization-fix-summary.md  quick-reference-async-operations.md  webview-integration-best-practices.md
.github/: release-please-config.json
.github/workflows/: pr-checks.yml  qt-native.yml  release.yml
docs/: DCC_UI_FREEZE_FIX.md  WEB_WORKER_GUIDE.md  dockable-panels.md  embedded-mcp-server.md  i18n-design.md  remote-debugging-zh.md  remote-debugging.md  tool-i18n-design.md
docs/rfcs/: 0001-flexible-config-system-zh.md  0001-flexible-config-system.md
examples/: mcp_embedded_demo.py  shelf_config.yaml  shelf_config_modular.yaml
examples/desktop/: run_desktop.py  run_desktop_minimal.py
examples/houdini/: shelves.yaml
examples/maya/: shelves.yaml
examples/nuke/: shelves.yaml
examples/scripts/: calculator.py  color_picker.py  file_browser.py  hello_world.py  houdini_node_info.py  image_viewer.py  maya_scene_info.py  maya_select_all_meshes.py  notepad.py  scene_stats.py  system_info.py
examples/scripts/3dsmax/: arnold_setup.py  array_master.py  batch_render.py  biped_setup.py  boolean_pro.py  camera_match.py  cat_rig.py  light_lister.py  motion_mixer.py  poly_tools.py  render_elements.py  skin_morph.py  spline_pro.py  symmetry.py  trajectory.py  uvw_editor.py  vray_setup.py  wire_params.py
examples/scripts/common/: placeholder.py
examples/scripts/houdini/: flip_fluid.py  hair_groom.py  mesh_repair.py  pyro_fx.py  rbd_fracture.py  scatter_pro.py  vdb_tools.py  vellum_cloth.py
examples/scripts/maya/: auto_rig.py  blend_shapes.py  boolean_pro.py  ctrl_curves.py  edge_flow.py  graph_editor_plus.py  hard_surface.py  ik_fk_switch.py  joint_tool.py  motion_path.py  pose_library.py  quad_draw.py  skin_weights.py  symmetry.py  uv_master.py
examples/scripts/nuke/: auto_grade.py  camera_tracker.py  deep_comp.py  edge_extend.py  keyer_pro.py  publish.py  version_up.py  write_manager.py
examples/scripts/pipeline/: asset_browser.py  scene_publisher.py  shot_loader.py  texture_manager.py
examples/scripts/unreal/: asset_import.py  blueprint_utils.py  camera_rig.py  foliage_pro.py  (+14 more)
scripts/: fix_icon_paths.py  test_i18n_debug.py  translate_tools.py  translation_cache.json
scripts/blender_addon/: __init__.py
scripts/substance_painter_plugin/: __init__.py
src/auroraview_dcc_shelves/: __init__.py  __main__.py  app.py  config.py  constants.py  launcher.py  settings.py  styles.py  ui.py  user_tools.py  utils.py
src/frontend/: App.tsx  App.vue  index.tsx  settings.tsx  style.css  types.ts
tests/: README.md  __init__.py  check_rust_compilation.py  conftest.py  diagnose_houdini_api.py  run_tests.py  test_adapters.py  test_config.py  test_launcher.py  test_loading_api.py  test_qt6_optimizations.py  test_remote_debugging.py  test_settings.py  test_settings_native_window.py  test_ui_automation.py  test_ui_console.py  test_ui_dialogs.py  test_ui_i18n.py  test_ui_interactions.py  test_ui_main_layout.py  test_ui_simple.py  test_ui_zoom.py
(+61 files in other folders)
