[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "auroraview-dcc-shelves"
version = "0.2.0"
description = "A dynamic DCC tool shelf system powered by AuroraView framework with YAML configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8,<3.11"
authors = [
    { name = "Hal Long", email = "hal.long@outlook.com" }
]
keywords = [
    "dcc",
    "shelf",
    "tools",
    "maya",
    "houdini",
    "auroraview",
    "webview",
    "pipeline"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "auroraview>=0.3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
qt = [
    "auroraview[qt]>=0.3.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyfakefs>=5.0",
    "ruff>=0.4.0",
    "nox>=2024.0.0",
]

[project.scripts]
auroraview-shelves = "auroraview_dcc_shelves.__main__:main"
dcc-shelves = "auroraview_dcc_shelves.__main__:main"

[project.urls]
Homepage = "https://github.com/loonghao/auroraview-dcc-shelves"
Repository = "https://github.com/loonghao/auroraview-dcc-shelves"
Documentation = "https://github.com/loonghao/auroraview-dcc-shelves#readme"
Issues = "https://github.com/loonghao/auroraview-dcc-shelves/issues"
Changelog = "https://github.com/loonghao/auroraview-dcc-shelves/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{ include = "auroraview_dcc_shelves", from = "src" }]

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
    "examples/",  # Example scripts for various DCCs
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B027",   # empty method in abstract base class (intentional hooks)
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument (common in callbacks/fixtures)
    "E402",   # module level import not at top (needed for TYPE_CHECKING)
    "SIM108", # use ternary operator (can reduce readability)
]

[tool.ruff.lint.isort]
known-first-party = ["auroraview_dcc_shelves"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src/auroraview_dcc_shelves"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyfakefs>=5.10.2",
    "pytest>=8.3.5",
]
